--- a/home-assistant/Dockerfile.master
+++ b/home-assistant/Dockerfile.master
@@ -1,7 +1,7 @@
 FROM molobrakos/home-assistant:base
 
 RUN pip3 install --no-cache-dir --upgrade \
-    home-assistant
+    homeassistant
 
 USER hass
 CMD [ "hass", "--config", "/config"]
