--- a/home-assistant/Dockerfile.master
+++ b/home-assistant/Dockerfile.master
@@ -3,5 +3,5 @@ FROM molobrakos/home-assistant:base
 RUN pip3 install --no-cache-dir --upgrade \
     homeassistant
 
-USER hass
+USER home-assistant
 CMD [ "hass", "--config", "/config"]
